[gd_scene load_steps=6 format=3 uid="uid://bn33a0kf23jx8"]

[ext_resource type="Theme" uid="uid://ct2wilxjo2x2v" path="res://assets/themes/tool_mag.tres" id="1_j3ehe"]
[ext_resource type="Script" uid="uid://ruyfks1d4nc6" path="res://scripts/tool_mag_page.gd" id="2_a2dek"]
[ext_resource type="Texture2D" uid="uid://bjvcav6o7tec6" path="res://assets/tool_icons/magazine_icons/claw_picker.png" id="3_51k17"]
[ext_resource type="Texture2D" uid="uid://ceieuve4op2ql" path="res://assets/tool_icons/magazine_icons/auto_picker.png" id="4_ysfeg"]
[ext_resource type="FontFile" uid="uid://fslvvjj84y6a" path="res://assets/fonts/Tektur/Tektur-Bold.ttf" id="5_wfb2s"]

[node name="leftPage2" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_j3ehe")
theme_override_constants/separation = 0
script = ExtResource("2_a2dek")
page = 2
tool_a_desc = "Grabbing without the stabbing

Collects: Paper, Plastic, Metal, Glass

Upgrade: Increase speed (%s/5)"
tool_b_desc = "The picker of the future

Collects: Paper, Plastic, Metal

Upgrade: Increase range (%s/5)"

[node name="topSeparator" type="HSeparator" parent="."]
layout_mode = 2
theme_type_variation = &"topSep"

[node name="toolAArea" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
theme_override_constants/margin_left = 24
theme_override_constants/margin_right = 24

[node name="toolCont" type="HBoxContainer" parent="toolAArea"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="toolIcon" type="TextureRect" parent="toolAArea/toolCont"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_51k17")
expand_mode = 1
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="toolAArea/toolCont"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="toolName" type="Label" parent="toolAArea/toolCont/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"nameLabel"
text = "CLAW PICKER"

[node name="toolDesc" type="Label" parent="toolAArea/toolCont/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"listingLabel"
text = "Grabbing without the stabbing

Collects: Paper, Plastic, Metal, Glass

Upgrade: Increase speed (%s/5)"
autowrap_mode = 3

[node name="priceLabel" type="Label" parent="toolAArea"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_type_variation = &"priceLabel"
text = "$75"
horizontal_alignment = 2
vertical_alignment = 2

[node name="toolSep" type="HSeparator" parent="."]
layout_mode = 2
theme_type_variation = &"listingSep"

[node name="toolAArea2" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
theme_override_constants/margin_left = 24
theme_override_constants/margin_right = 24

[node name="toolCont" type="HBoxContainer" parent="toolAArea2"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="VBoxContainer" type="VBoxContainer" parent="toolAArea2/toolCont"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="toolName" type="Label" parent="toolAArea2/toolCont/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"nameLabel"
text = "AUTO-PICKER"
horizontal_alignment = 2

[node name="toolDesc" type="Label" parent="toolAArea2/toolCont/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"listingLabel"
text = "All the picking, none of the work

Collects: Paper, Plastic, Metal

Upgrade: Increase range (%s/5)"
horizontal_alignment = 2
autowrap_mode = 3

[node name="toolIcon" type="TextureRect" parent="toolAArea2/toolCont"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_ysfeg")
expand_mode = 1
stretch_mode = 3

[node name="priceLabel" type="Label" parent="toolAArea2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_type_variation = &"priceLabel"
theme_override_fonts/font = ExtResource("5_wfb2s")
text = "$100"
horizontal_alignment = 2
vertical_alignment = 2

[node name="toolSep2" type="HSeparator" parent="."]
layout_mode = 2
theme_type_variation = &"listingSep"

[node name="gearArea" type="Control" parent="."]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="toolSep3" type="HSeparator" parent="."]
visible = false
layout_mode = 2
theme_type_variation = &"listingSep"

[node name="botControl" type="Control" parent="."]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
